--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header>
+    <header id="home">
       <div class="logo">
         <img
           class="logo__img"
@@ -19,15 +19,17 @@
         />
       </div>
 
-      <ul class="navigation">
-        <li>Home</li>
-        <li>Curiosidades</li>
-        <li>Vídeo</li>
+      <nav>
+        <ul class="navigation">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#curiosities">Curiosidades</a></li>
+        <li><a href="#video">Vídeo</a></li>
       </ul>
+    </nav>
     </header>
 
     <main>
-      <section class="curiosities">
+      <section id="curiosities">
         <div class="curiosities__title">
           <h2>Curiosidades do estado de São Paulo</h2>
         </div>
@@ -60,7 +62,7 @@
         </div>
       </section>
 
-      <section class="video">
+      <section id="video">
         <div class="video__card">
           <iframe
             width="560"
