--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
     <title>São Paulo</title>
   </head>
 
@@ -21,52 +24,48 @@
 
       <nav>
         <ul class="navigation">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#curiosities">Curiosidades</a></li>
-        <li><a href="#video">Vídeo</a></li>
-      </ul>
-    </nav>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#curiosities">Curiosidades</a></li>
+          <li><a href="#video">Vídeo</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
+      <div class="banner"></div>
+
       <section id="curiosities">
         <div class="curiosities__title">
           <h2>Curiosidades do estado de São Paulo</h2>
         </div>
 
-        <div class="curiosities__card card__one">
-          <p>
-            A cidade mais antiga do Brasil é São Vicente, no litoral paulista. A
-            expedição portuguesa de Gaspar de Lemos chegou à Ilha de Gohayó no
-            dia 22 de janeiro de 1502 e, por ser dia de São Sebastião, passou a
-            chamar o local pelo nome do santo. Exatamente 30 anos depois, no dia
-            22 de janeiro de 1532, o navegador Martim Afonso de Sousa, enviado
-            pela Coroa Portuguesa, chegou a São Vicente para construir a
-            primeira vila do Brasil. Católico fervoroso, Martim Afonso fundou a
-            cidade, e a batizou de São Vicente.
-          </p>
-        </div>
+        <div class="container__cards">
+          <div class="curiosities__card card__one">
+            <p>
+              A cidade mais antiga do Brasil é São Vicente, no litoral paulista.
+            </p>
+          </div>
 
-        <div class="curiosities__card card__two">
-          <p>
-            Campos do Jordão, que fica a 1.628 metros acima do nível do mar, é a
-            cidade mais alta do Brasil.
-          </p>
-        </div>
+          <div class="curiosities__card card__two">
+            <p>
+              Campos do Jordão, que fica a 1.628 metros acima do nível do mar, é
+              a cidade mais alta do Brasil.
+            </p>
+          </div>
 
-        <div class="curiosities__card card__three">
-          <p>
-            O maior porto da América Latina é o de Santos, no litoral paulista,
-            com capacidade para receber até 53 navios.
-          </p>
+          <div class="curiosities__card card__three">
+            <p>
+              O maior porto da América Latina é o de Santos, no litoral
+              paulista, com capacidade para receber até 53 navios.
+            </p>
+          </div>
         </div>
       </section>
 
       <section id="video">
         <div class="video__card">
+          <h2>Vídeo</h2>
           <iframe
-            width="560"
-            height="315"
             src="https://www.youtube.com/embed/ToqIPyD8Suo"
             title="YouTube video player"
             frameborder="0"
@@ -77,8 +76,6 @@
       </section>
     </main>
 
-    <footer>
-        
-    </footer>
+    <footer></footer>
   </body>
 </html>
