--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="socialmedia">
+        <a href="https://www.linkedin.com/in/guilhermeolialen/" target="_blank"
+          ><img src="./img/linkedin-icon.png" alt=""
+        /></a>
+        <a href="https://github.com/guiolialen/" target="_blank"
+          ><img src="./img/github-icon.png" alt=""
+        /></a>
+      </div>
+      
+      <div class="copyright">
+        <p>Desenvolvido por Guilherme Alencar</p>
+      </div>
+      
+    </footer>
   </body>
 </html>
